--- a/style.css
+++ b/style.css
@@ -15,7 +15,9 @@ section {
 }
 .link-button {
   text-decoration: none;
-  background-color: orange;
+  background-image: linear-gradient(orange, tomato);
   padding: 10px 40px;
-  border-radius: 10px;
+  border-radius: 5px;
+  color: white;
+  font-weight: 700;
 }
