--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@ section {
 }
 .half-width {
   width: 50%;
+  padding: 2%;
+}
+.half-width img {
+  width: 100%;
+  padding-left: 15%;
 }
 .link-button {
   text-decoration: none;
