--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Poppins", sans-serif;
+  margin: 0;
 }
 h1 {
   font-size: 50px;
@@ -9,13 +10,20 @@ h1 {
 }
 section {
   display: flex;
+  margin-bottom: 150px;
 }
 .half-width {
   width: 50%;
   padding: 2%;
 }
+.half-width-div1 {
+  padding-left: 100px;
+}
+.half-width-div2 {
+  padding-right: 65px;
+}
 .half-width img {
-  width: 100%;
+  width: 85%;
   padding-left: 15%;
 }
 .link-button {
@@ -25,4 +33,13 @@ section {
   border-radius: 5px;
   color: white;
   font-weight: 700;
+}
+.top-banner {
+  background-image: url(images/top-banner.png);
+  background-repeat: no-repeat;
+}
+.dream-banner {
+  background-image: url(images/dream-bg.png);
+  background-repeat: no-repeat;
+  background-position: right;
 }
